# crunchy

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Pipfile  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/workflows/: Crunchy_CI.yml  black.yml  build_and_publish_pypi.yml  bumpversion.yml  main.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  workflow-master.yaml
container/: Dockerfile
crunchy/: __main__.py  cli.py  command.py  compress.py  decompress.py  fastq.py  files.py  integrity.py  main.py  metadata.py  utils.py  version.py
crunchy/cli/: auto_cmd.py  base.py  checksum_cmd.py  compare_cmd.py  compress_cmd.py  decompress_cmd.py  utils.py
tests/: conftest.py  test_compress.py  test_decompress.py  test_files.py  test_integrity.py  test_main.py  test_metadata.py  test_utils.py
tests/cli/: conftest.py  test_auto_cmd.py  test_compare.py  test_compress_cmd.py  test_decompress_cmd.py
tests/command/: conftest.py  test_command.py
tests/fixtures/: reference.fasta.fai
tests/fixtures/bam/: test.bam  test.bam.bai  test.cram  test.cram.crai
tests/fixtures/spring/: CPCT12345678R_HJJLGCCXX_S1_L001.spring  TEST.spring
